--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,18 @@ dependencies:
   firebase_core: 0.5.3
   introduction_screen: ^2.1.0
   intl_phone_field: ^2.0.1
+  flutter_map: any
+  geocoder: ^0.2.1
+  tuple: ^1.0.2
+  latlong: ^0.6.1
+  positioned_tap_detector_2: ^1.0.0
+  transparent_image: ^1.0.0
+  async: ^2.1.0
+  flutter_image: ^3.0.0
+  vector_math: ^2.0.0
+  proj4dart: ^1.0.4
+  meta: ^1.1.0
+  collection: ^1.14.0
 
 dev_dependencies:
   flutter_test:
