--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   proj4dart: ^1.0.4
   meta: ^1.1.0
   collection: ^1.14.0
+  uuid: ^2.0.4
+  flutter_osm_plugin: ^0.6.7+3
 
 dev_dependencies:
   flutter_test:
