--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   collection: ^1.14.0
   uuid: ^2.0.4
   flutter_osm_plugin: ^0.6.7+3
+  intl_phone_number_input: ^0.6.0
 
 dev_dependencies:
   flutter_test:
